--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-VITE_SERVER_URL="http://localhost:4000"
+PORT = 4000
+
+SECRET = swordfish
+
+MONGODB_URI = mongodb+srv://NikitaV05:Magic_piano05@cluster0.waf5hpg.mongodb.net/Project4?retryWrites=true&w=majority
+
+REACT_APP_URI = 'http://localhost:5173'
