--- a/package.json
+++ b/package.json
@@ -1,39 +1,15 @@
 {
-  "name": "client",
+  "name": "project4",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "@craco/craco": "^7.1.0",
-    "axios": "^1.4.0",
-    "dotenv": "^16.3.1",
-    "react": "^18.2.0",
-    "react-countup": "^6.4.2",
-    "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10",
-    "react-icons": "^4.10.1",
-    "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.14.2",
-    "react-visibility-sensor": "^5.1.1",
-    "tw-elements": "^1.0.0-beta3"
-  },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^9.8.8",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
 }
