--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "project4-client",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -16,6 +15,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "ts-node": "^10.9.1",
     "tw-elements": "^1.0.0"
   },
   "devDependencies": {
