--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "mongoose": "^7.6.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "ts-node": "^10.9.1",
     "tw-elements": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
+    "@types/react-datepicker": "^4.19.1",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
