--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
     "mongoose": "^7.6.1",
     "react": "^18.2.0",
