--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@material-ui/core": "^4.12.4",
+    "@material-ui/core": "4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.14.16",
     "axios": "^1.5.0",
@@ -29,7 +29,7 @@
     "tw-elements": "^1.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
+    "@types/react": "18.2.21",
     "@types/react-datepicker": "^4.19.1",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
